--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,16 @@
-name: Release Tanto
+name: Build Tanto (CI)
 
 on:
   push:
-    tags:
-      - 'v*'
+    branches: ["*"]
+    paths-ignore:
+      - "**/*.md"
+  pull_request:
+    branches: ["main"]
 
 jobs:
   build:
     runs-on: windows-latest
-    permissions:
-      contents: write
 
     steps:
       - name: Checkout code
@@ -31,35 +32,16 @@ jobs:
         run: |
           python icon/convert.py
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-
-      - name: Install icon dependencies
-        shell: pwsh
-        run: |
-          python -m pip install --upgrade pip
-          pip install pillow
-
-      - name: Generate icon assets
-        shell: pwsh
-        run: |
-          python icon/convert.py
-
-      - name: Setup Environment
+      - name: Setup AutoHotkey compiler
         shell: powershell
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           Write-Host "1. Downloading Ahk2Exe from GitHub..."
-          # 下载编译器
           gh release download --repo AutoHotkey/Ahk2Exe --pattern "*.zip" --output "Ahk2Exe.zip" --clobber
           Expand-Archive -Path "Ahk2Exe.zip" -DestinationPath "./compiler" -Force
-          
+
           Write-Host "2. Downloading AutoHotkey v2 Base Files from GitHub..."
-          # 修复点：从 GitHub Release 下载 AHK v2，不再访问 autohotkey.com
-          # 匹配模式 "AutoHotkey_*.zip" 可以找到类似 AutoHotkey_2.0.18.zip 的文件
           gh release download --repo AutoHotkey/AutoHotkey --pattern "AutoHotkey_*.zip" --output "ahkv2.zip" --clobber
           Expand-Archive -Path "ahkv2.zip" -DestinationPath "./ahkv2" -Force
 
@@ -67,13 +49,11 @@ jobs:
         shell: cmd
         run: |
           echo Compiling...
-          REM 这里的路径逻辑不用变
           ".\compiler\Ahk2Exe.exe" /in "tanto.ahk" /out "Tanto.exe" /icon "icon\assets\pencil.ico" /bin ".\ahkv2\AutoHotkey64.exe"
 
-      - name: Release to GitHub
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
         with:
-          files: Tanto.exe
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: Tanto.exe
+          path: Tanto.exe
+          retention-days: 5
