--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,11 +21,12 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install icon dependencies
+      - name: Install icon dependencies (uv)
         shell: pwsh
         run: |
           python -m pip install --upgrade pip
-          pip install pillow
+          pip install uv
+          uv pip install pillow svglib reportlab
 
       - name: Generate icon assets
         shell: pwsh
